tests/ui/consts/const-eval/issue-52475.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/issue-52475.rs:5:9
   |
LL | /         while n < 5 {
LL | |             n = (n + 1) % 5;
LL | |             x = &0; // Materialize a new AllocId
LL | |         }
   | |_________^ exceeded interpreter step limit (see `#[const_eval_limit]`)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
